k8s/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: backend-ingress

spec:
  ingressClassName: nginx

  rules:
    - host: forge.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: backend

                port:
                  number: 8000
